--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </section>
 
 <section class="grid">
-  <a href="#goal1" class="goal-card"><img src="SDG1.png"></a>
-  <a href="#goal2" class="goal-card"><img src="SDG2.jpg"></a>
-  <a href="#goal3" class="goal-card"><img src="SDG3.png"></a>
+  <a href="#goal1" class="goal-card"><img src="SDG1.png" alt="SDG 1: No Poverty"></a>
+  <a href="#goal2" class="goal-card"><img src="SDG2.jpg" alt="SDG 2: Zero Hunger"></a>
+  <a href="#goal3" class="goal-card"><img src="SDG3.png" alt="SDG 3: Good Health and Well-Being"></a>
   <a href="#goal4" class="goal-card"><img src="SDG4.png"></a>
   <a href="#goal5" class="goal-card"><img src="SDG_5.png"></a>
   <a href="#goal6" class="goal-card"><img src="SDG6.png"></a>
@@ -41,80 +41,100 @@
 <section id="goal1" class="sdg" style="background:#E5243B;">
   <h2>SDG 1: No Poverty</h2>
   <img src="No Poverty.jpeg" alt="SDG 1: No Poverty" class="SDG">
-  <p><b>SDG 1: No Poverty</b> seeks to eradicate poverty worldwide in all of its manifestations. Its main goal is to guarantee that everyone, particularly the most vulnerable, has access to opportunities to enhance their quality of life, social protection, and basic resources.</p>
-  <p>Reducing inequality and increasing resilience to natural disasters, economic shocks, and other crises are also key components of the goal. SDG 1 aims to permanently lift people out of poverty by promoting inclusive economic growth and sustainable social safety nets.</p>
+  <div class="sdg-content">
+   <p><b>SDG 1: No Poverty</b> seeks to eradicate poverty worldwide in all of its manifestations. Its main goal is to guarantee that everyone, particularly the most vulnerable, has access to opportunities to enhance their quality of life, social protection, and basic resources.</p>
+   <p>Reducing inequality and increasing resilience to natural disasters, economic shocks, and other crises are also key components of the goal. SDG 1 aims to permanently lift people out of poverty by promoting inclusive economic growth and sustainable social safety nets.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
-</section>
+  </section>
 
 <section id="goal2" class="sdg" style="background:#DDA63A;">
   <h2>SDG 2: Zero Hunger</h2>
   <img src="Zero Hunger.jpeg" alt="SDG 2: Zer Hunger" class="SDG">
-  <p><b>SDG 2: Zero Hunger</b> seeks to eradicate hunger and guarantee that everyone has year-round access to enough food that is safe and nourishing. Its main objectives are to support sustainable agriculture and enhance food security and nutrition, especially for disadvantaged groups.</p>
-  <p>Supporting small-scale farmers, boosting agricultural output, and promoting sustainable food production systems are also key components of the objective. By doing this, SDG 2 aims to address hunger and malnutrition globally in a sustainable manner.</p>
+  <div class="sdg-content">
+   <p><b>SDG 2: Zero Hunger</b> seeks to eradicate hunger and guarantee that everyone has year-round access to enough food that is safe and nourishing. Its main objectives are to support sustainable agriculture and enhance food security and nutrition, especially for disadvantaged groups.</p>
+   <p>Supporting small-scale farmers, boosting agricultural output, and promoting sustainable food production systems are also key components of the objective. By doing this, SDG 2 aims to address hunger and malnutrition globally in a sustainable manner.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
 <section id="goal3" class="sdg" style="background:#4C9F38;">
   <h2>SDG 3: Good Health and Well-Being</h2>
   <img src="Good.jpg" alt="SDG 3: Good Health and Well-Being" class="SDG">
-  <p><b>SDG 3: Good Health and Well-Being</b> seeks to guarantee and advance the health and well-being of all individuals, regardless of age. Reducing maternal and child mortality, fighting diseases like HIV/AIDS and malaria, and guaranteeing access to necessary medical care are its main objectives.</p>
-  <p>The objective also places a strong emphasis on universal health coverage, mental health, and the prevention of non-communicable diseases. In order to improve life expectancy and quality of life globally, SDG 3 aims to improve healthcare systems and encourage healthy lifestyles.</p>
+  <div class="sdg-content">
+   <p><b>SDG 3: Good Health and Well-Being</b> seeks to guarantee and advance the health and well-being of all individuals, regardless of age. Reducing maternal and child mortality, fighting diseases like HIV/AIDS and malaria, and guaranteeing access to necessary medical care are its main objectives.</p>
+   <p>The objective also places a strong emphasis on universal health coverage, mental health, and the prevention of non-communicable diseases. In order to improve life expectancy and quality of life globally, SDG 3 aims to improve healthcare systems and encourage healthy lifestyles.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
 <section id="goal4" class="sdg" style="background:#C5192D;">
   <h2>SDG 4: Quality Education</h2>
+  <div class="sdg-content">
   <img src="Education.jpg" alt="Add an image here" class="SDG">
-  <p><b>SDG 4: Quality Education</b> seeks to support opportunities for lifelong learning and to guarantee inclusive, equitable, and high-quality education for all. Its main goal is to provide free primary and secondary education to all, with a special emphasis on children and underprivileged populations.</p>
-  <p>Along with eradicating inequalities in educational access, the goal also places a strong emphasis on enhancing higher education, vocational training, and literacy and numeracy. SDG 4 aims to empower people, encourage economic growth, and support sustainable development through education investment.</p>
+   <p><b>SDG 4: Quality Education</b> seeks to support opportunities for lifelong learning and to guarantee inclusive, equitable, and high-quality education for all. Its main goal is to provide free primary and secondary education to all, with a special emphasis on children and underprivileged populations.</p>
+   <p>Along with eradicating inequalities in educational access, the goal also places a strong emphasis on enhancing higher education, vocational training, and literacy and numeracy. SDG 4 aims to empower people, encourage economic growth, and support sustainable development through education investment.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
 <section id="goal5" class="sdg" style="background:#FF3A21;">
   <h2>SDG 5: Gender Equality</h2>
   <img src="gender.jpg" alt="Add an image here" class="SDG">
-  <p><b>SDG 5: Gender Equality</b> seeks to empower all women and girls globally and attain gender equality. Its main objectives are to eradicate gender-based violence, discrimination, and destructive behaviors and to guarantee equal opportunities in leadership roles, work, and education.</p>
-  <p>Equal access to legal rights, reproductive health services, and decision-making participation are also highlighted in the goal. In order to build inclusive societies where all people, regardless of gender, can realize their full potential, SDG 5 aims to advance gender equality.</p>
+  <div class="sdg-content">
+   <p><b>SDG 5: Gender Equality</b> seeks to empower all women and girls globally and attain gender equality. Its main objectives are to eradicate gender-based violence, discrimination, and destructive behaviors and to guarantee equal opportunities in leadership roles, work, and education.</p>
+   <p>Equal access to legal rights, reproductive health services, and decision-making participation are also highlighted in the goal. In order to build inclusive societies where all people, regardless of gender, can realize their full potential, SDG 5 aims to advance gender equality.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
 <section id="goal6" class="sdg" style="background: #0a97d9;">
   <h2>SDG 6: Clean Water and Sanitation</h2>
   <img src="clean.webp" alt="Add an image here" class="SDG">
-  <p><b>SDG 6: Clean Water and Sanitation</b> seeks to guarantee universal access to and sustainable management of water and sanitation. Its main objectives are to improve sanitation infrastructure, supply safe and reasonably priced drinking water, and encourage good hygiene habits globally.</p>
-  <p>In order to promote human health and environmental sustainability, the goal also places a strong emphasis on preserving and rehabilitating ecosystems related to water, cutting pollution, and improving water use efficiency.</p>
+  <div class="sdg-content">
+   <p><b>SDG 6: Clean Water and Sanitation</b> seeks to guarantee universal access to and sustainable management of water and sanitation. Its main objectives are to improve sanitation infrastructure, supply safe and reasonably priced drinking water, and encourage good hygiene habits globally.</p>
+   <p>In order to promote human health and environmental sustainability, the goal also places a strong emphasis on preserving and rehabilitating ecosystems related to water, cutting pollution, and improving water use efficiency.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
 <section id="goal7" class="sdg" style="background: #fcc30b;">
   <h2>SDG 7: Affordable and Clean Energy</h2>
   <img src="energy.jpg" alt="SDG : 7 Affordable and Clean Energy" class="SDG">
-  <p><b>SDG 7: Affordable and Clean Energy</b> seeks to guarantee that everyone has access to modern, sustainable, and dependable energy. In order to provide clean energy solutions globally, it focuses on boosting the use of renewable energy sources, enhancing energy efficiency, and developing infrastructure.</p>
-  <p>The objective also places a strong emphasis on lowering dependency on fossil fuels, promoting cutting-edge technologies, and guaranteeing that energy services are reasonably priced, particularly for underprivileged groups.</p>
+  <div class="sdg-content">
+   <p><b>SDG 7: Affordable and Clean Energy</b> seeks to guarantee that everyone has access to modern, sustainable, and dependable energy. In order to provide clean energy solutions globally, it focuses on boosting the use of renewable energy sources, enhancing energy efficiency, and developing infrastructure.</p>
+   <p>The objective also places a strong emphasis on lowering dependency on fossil fuels, promoting cutting-edge technologies, and guaranteeing that energy services are reasonably priced, particularly for underprivileged groups.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
 <section id="goal8" class="sdg" style="background: #a11d33;">
   <h2>SDG 8: Decent Work and Economic Growth</h2>
   <img src="work.jpg" alt="SDG : 7 Affordable and Clean Energy" class="SDG">
-  <p><b>SDG 8: Decent Work and Economic Growth</b> seeks to advance full and productive employment, decent work for all, and consistent, inclusive, and sustainable economic growth. It focuses on giving everyone the chance to engage in economic activity, obtain fair wages, and enhance working conditions.</p>
-  <p>Along with promoting innovation, entrepreneurship, and safe working conditions, the objective makes sure that economic expansion doesn't worsen inequality or damage the environment.</p>
+  <div class="sdg-content">
+   <p><b>SDG 8: Decent Work and Economic Growth</b> seeks to advance full and productive employment, decent work for all, and consistent, inclusive, and sustainable economic growth. It focuses on giving everyone the chance to engage in economic activity, obtain fair wages, and enhance working conditions.</p>
+   <p>Along with promoting innovation, entrepreneurship, and safe working conditions, the objective makes sure that economic expansion doesn't worsen inequality or damage the environment.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
 <section id="goal9" class="sdg" style="background: #fd9d24;">
   <h2>SDG 9: Industry, Innovation and Infastructure</h2>
   <img src="building.webp" alt="SDG : 7 Affordable and Clean Energy" class="SDG">
-  <p><b>SDG 9: Industry, Innovation and Infastructure</b> seeks to develop innovative solutions, encourage inclusive and sustainable industrialization, and construct resilient infrastructure. It focuses on developing infrastructure and industries to promote technological advancement, job creation, and economic growth.</p>
-  <p>In order to guarantee that advancement serves everyone while preserving the environment, the goal also places a strong emphasis on sustainable practices, more research and development, and access to contemporary technologies.</p>
+  <div class="sdg-content">
+   <p><b>SDG 9: Industry, Innovation and Infastructure</b> seeks to develop innovative solutions, encourage inclusive and sustainable industrialization, and construct resilient infrastructure. It focuses on developing infrastructure and industries to promote technological advancement, job creation, and economic growth.</p>
+   <p>In order to guarantee that advancement serves everyone while preserving the environment, the goal also places a strong emphasis on sustainable practices, more research and development, and access to contemporary technologies.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
 <section id="goal10" class="sdg" style="background: #dd1367;">
   <h2>SDG 10: Reduced Inequalities</h2>
   <img src="equal.webp" alt="SDG : 7 Affordable and Clean Energy" class="SDG">
-  <p><b>SDG 10: Reduced Inequalities</b> seeks to lessen political, social, and economic disparities within and between nations. It encourages policies that guarantee the income growth of the poorest 40% of the population surpasses the national average, empowers underrepresented and marginalized groups, and repeals laws that discriminate. </p>
-  <p>SDG 10 advocates for inclusive policies like social protection, equitable taxation, and wage measures in order to accomplish this. In order to promote equitable development, it also advocates for responsible migration policies and increased representation in international economic organizations.</p>
+  <div class="sdg-content">
+   <p><b>SDG 10: Reduced Inequalities</b> seeks to lessen political, social, and economic disparities within and between nations. It encourages policies that guarantee the income growth of the poorest 40% of the population surpasses the national average, empowers underrepresented and marginalized groups, and repeals laws that discriminate. </p>
+   <p>SDG 10 advocates for inclusive policies like social protection, equitable taxation, and wage measures in order to accomplish this. In order to promote equitable development, it also advocates for responsible migration policies and increased representation in international economic organizations.</p>
+  </div>
   <a href="#top" class="back-button">Back to the top</a>
 </section>
 
